ALL Tables fixed with overflow and bold issue fixed

--- a/apps/frontend/src/css/component-css/ServiceRequestTable.css
+++ b/apps/frontend/src/css/component-css/ServiceRequestTable.css
@@ -1,14 +1,11 @@
-.medTable{
+.medTable {
+    overflow-x: scroll;
+    overflow-y: scroll;
 
-
-    max-height: 100%;
-    min-width: 140px;
-    width: 100%;
-    overflow-x: auto;
-    overflow-y: auto;
     justify-content: left;
     border-collapse: collapse;
 }
+
 
 .tableTRHead{
 
@@ -26,6 +23,7 @@
 
 .tableTD{
     padding: 8px;
+    font-weight: normal;
 }
 
 
